--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "com.unity.feature.2d": "1.0.0",
+    "com.unity.formats.fbx": "4.1.3",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
